--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="text/plain" href="B" />
+  <link rel="icon" type="image/png" href="./src/assets/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bharat Business Deals - Letter Drafting</title>
+  <title>Quick Letters - AI Powered Letter Drafting</title>
   <script>
     if (typeof global === 'undefined') {
       window.global = window;
